--- a/css/style.css
+++ b/css/style.css
@@ -435,7 +435,7 @@ footer h4{
 
 /*TABLETS VERSION*/
 
-@media(max-width:992px){
+@media screen and (max-width:992px){
 
     .filter-icons{
         flex-wrap: wrap;
@@ -474,7 +474,7 @@ footer h4{
 
 /*MOBILE VERSION*/
 
-@media  (max-width:768px) {
+@media screen and (max-width:768px) {
 
     
     /*HEADER*/
@@ -582,8 +582,8 @@ footer h4{
        
    }
 
-   .second {
-       max-height: 520px;
+   .activities-card {
+       max-height: 450px;
    }
    
    
