--- a/css/style.css
+++ b/css/style.css
@@ -119,53 +119,63 @@ header {
 .filter-icons {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
     margin-bottom: 20px;
     padding: 30px;
     
 }
+.filter-icons > h3 {
+    margin-right: 30px;
 
-.filter-icons span {
-    display: flex;
-    align-items: center;
 }
 
-.filter-icons span i {
+.filter-icons h3::first-letter {
+    text-transform: capitalize;
+}
+
+.filter-elements {
+    display: flex;
+     
+    border-radius: 50px;
+    border-left: none; 
+    font-size: large;
+    font-weight: bold;  
+    margin-right: 30px;
+    position: relative;
+    
+
+}
+
+.filter-elements i.fas {
     display: flex;
     padding: 20px;
     background-color: var(--lightblue);
     border-radius: 50%;
-    margin-right: 10px;
+    position: absolute;
+    left: -2px;
     color: var(--blue);
    
+}
+
+.filter-elements h3 {
+    flex-wrap: nowrap;
+    padding: 17px 17px 17px 68px;
+    border: 2px solid var(--lightgrey);
+    border-left: none;
+    border-radius: 30px;
+    margin: 0;
+    font-size: large;
+    
 }
 
 .fa-child {
     justify-content: center;
     width: 60px;
-
 }
 
 
-.filter-icons h3 {
-    margin: 0 30px 0 0;
-    font-size: large;
-    text-transform: capitalize;
-    
-}
-
-.filter-icons span {
-    border: 3px solid var(--lightgrey);
-    border-radius: 50px;
-    margin-right: 25px;
-    border-left: none; 
-    font-size: large;
-    font-weight: bold;
-    text-transform: capitalize;
-    padding-right: 20px;
-}
-
-
-.filter-icons span:hover {
+.filter-elements:hover {
     background-color: var(--lightblue);
     cursor: pointer;
     transform: scale(1.01);
